# dog

./: Cargo.toml  README.md  index.d.ts  index.js  index.mjs  package.json  pirates.js  test.ts
.github/workflows/: CI.yaml
__test__/: index.spec.ts
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
node/: Cargo.toml
node/src/: lib.rs
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
