[package]
edition = "2018"
name = "cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[[bin]]
name = "dog"
path = "src/main.rs"

[dependencies]
ansi_term = "0.12"
rayon = "1.5"
serde = "1"
serde_derive = "1"
serde_json = "1"
walkdir = "2"

[target.'cfg(not(target_env = "musl"))'.dependencies]
mimalloc = {version = "0.1"}
