[package]
edition = "2018"
name = "dog"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[[bin]]
name = "dog"
path = "src/main.rs"

[dependencies]
ansi_term = "0.12"
anyhow = "1"
once_cell = "1"
rayon = "1.5"
serde = "1"
serde_derive = "1"
serde_json = "1"
swc = {version = "0.40"}
swc_common = {version = "0.11", features = ["tty-emitter"]}
swc_ecma_visit = {version = "0.35"}
swc_ecmascript = {version = "0.55", features = ["parser", "transforms"]}
thiserror = "1"
walkdir = "2"

[target.'cfg(not(target_env = "musl"))'.dependencies]
mimalloc = {version = "0.1"}
